--- a/specRunner.html
+++ b/specRunner.html
@@ -20,11 +20,14 @@
     <script src="lib/compressString.js"></script>
     <script src="lib/findDuplicates.js"></script>
     <script src="lib/stringCalculator.js"></script>
+    <script src="lib/repeatify.js"></script>
 
     <!-- load your test files here -->
     <script src="test/findDuplicates.test.js"></script>
     <script src="test/compressString.test.js"></script>
     <script src="test/stringCalculator.test.js"></script>
+    <script src="test/repeatify.test.js"></script>
+    <script src="test/timer.test.js"></script>
 
     <script>
       mocha.run();
